--- a/HN120_ShopQuanAo.View/HN120_ShopQuanAo.View.csproj
+++ b/HN120_ShopQuanAo.View/HN120_ShopQuanAo.View.csproj
@@ -18,6 +18,7 @@
     <Folder Include="Areas\Customer\Data\" />
     <Folder Include="Areas\Customer\Models\" />
     <Folder Include="Areas\Customer\Views\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
   <ItemGroup>
