--- a/HN120_ShopQuanAo.API/appsettings.json
+++ b/HN120_ShopQuanAo.API/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
 
 
-    "MyCS": "Data Source=DESKTOP-3A6J796\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
+    "MyCS": "Data Source=DESKTOP-4QC868L\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
 
 
   },
