Hiep update kieu du lieu ben gio hang

--- a/HN120_ShopQuanAo.View/HN120_ShopQuanAo.View.csproj
+++ b/HN120_ShopQuanAo.View/HN120_ShopQuanAo.View.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\locdetailnguoidung.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\locdetailnguoidung.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
@@ -14,8 +22,11 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Customer\Data\" />
     <Folder Include="Areas\Customer\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\locdetailnguoidung.js" />
   </ItemGroup>
 
   <ItemGroup>
