--- a/HN120_ShopQuanAo.API/appsettings.json
+++ b/HN120_ShopQuanAo.API/appsettings.json
@@ -10,7 +10,7 @@
 
 
 
-    "MyCS": "Data Source=DESKTOP-QQ18T65\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
+    "MyCS": "Data Source=LAPTOP-DAV1LO0Q\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
 
 
   },
