Update SenderEmail for register

--- a/HN120_ShopQuanAo.API/appsettings.json
+++ b/HN120_ShopQuanAo.API/appsettings.json
@@ -7,7 +7,13 @@
     "DurationInMinutes": 60
   },
   "ConnectionStrings": {
-    "MyCS": "Data Source=HƯNG\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline2;Integrated Security=True;"
+    "MyCS": "Data Source=DESKTOP-QQ18T65\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline2;Integrated Security=True;"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "toankhac21082003@gmail.com",
+    "SmtpPass": "glmbusaxthbmlhul"
   },
   "Logging": {
     "LogLevel": {
