--- a/HN120_ShopQuanAo.API/appsettings.json
+++ b/HN120_ShopQuanAo.API/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
 
 
-    "MyCS": "Data Source=LAPTOP-DAV1LO0Q\\SQLEXPRESS;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
+    "MyCS": "Data Source=DESKTOP-L5F3V70;Initial Catalog=ShopQuanAoOnline;Integrated Security=True;"
 
   },
   "EmailSettings": {
